Fix comment list word wrap.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -232,7 +232,7 @@ header a {
   padding: 20px 20px;
   border: 1px solid rgba(0, 0, 0, 0.09);
   border-radius: 3px;
-  word-wrap: break-word; }
+  word-break: break-all; }
 
 .funcbox-comment-item.highlight {
   animation: highlight 1.5s ease-out; }
