--- a/src/css/_comment.scss
+++ b/src/css/_comment.scss
@@ -109,7 +109,7 @@
       padding: 20px 20px;
       border: 1px solid rgba(0,0,0,.09);
       border-radius: 3px;
-      word-wrap: break-word;
+      word-break: break-all;
   }
 
   .funcbox-comment-item.highlight {
